--- a/中华联邦文档库/index.html
+++ b/中华联邦文档库/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>短链接跳转</title>
-    <script defer src="redirect.js"></script>
+    <meta http-equiv="refresh" content="0; url=https://wumindang.github.io/FRC/">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>正在跳转...</h1>
+    <p>If you are not redirected, <a href="https://github.com/wumindang/FRC/blob/main/%E4%B8%AD%E5%8D%8E%E8%81%94%E9%82%A6%E6%96%87%E6%A1%A3%E5%BA%93%2F%E4%B8%AD%E5%8D%8E%E8%81%94%E9%82%A6%E7%BB%84%E7%BB%87%E6%9E%B6%E6%9E%84.png">click here</a>.</p>
 </body>
 </html>
