--- a/中华联邦文档库/link1.html
+++ b/中华联邦文档库/link1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://wumindang.github.io/FRC/">
+    <meta http-equiv="refresh" content="0; url=https://github.com/wumindang/FRC/blob/main/%E4%B8%AD%E5%8D%8E%E8%81%94%E9%82%A6%E6%96%87%E6%A1%A3%E5%BA%93%2F%E4%B8%AD%E5%8D%8E%E8%81%94%E9%82%A6%E7%BB%84%E7%BB%87%E6%9E%B6%E6%9E%84.png">
     <title>Redirecting...</title>
 </head>
 <body>
