--- a/wuminzhuyimubiao.html
+++ b/wuminzhuyimubiao.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://github.com/wumindang/FRC/blob/626844cf5c1f28a6a22e479f749b1fec16e9aa7f/%E6%94%BF%E5%85%9A%E6%96%87%E6%A1%A3%E5%BA%93/%3C%3C%E4%BA%94%E4%B9%8B%E7%90%86%E5%BF%B5%3E%3E%E8%AF%A6%E8%A7%A3.md">
+    <meta http-equiv="refresh" content="0; url=https://github.com/wumindang/FRC/blob/5ecca1f7c94d39a45b511fa3de0c76c940fe7daa/%E8%81%94%E9%82%A6%E6%96%87%E6%A1%A3%E5%BA%93/%E3%80%8A%E4%BA%94%E6%B0%91%E4%B8%BB%E4%B9%89%E3%80%8B%E7%9B%AE%E6%A0%87.md">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://github.com/wumindang/FRC/blob/626844cf5c1f28a6a22e479f749b1fec16e9aa7f/%E6%94%BF%E5%85%9A%E6%96%87%E6%A1%A3%E5%BA%93/%3C%3C%E4%BA%94%E4%B9%8B%E7%90%86%E5%BF%B5%3E%3E%E8%AF%A6%E8%A7%A3.md">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://github.com/wumindang/FRC/blob/5ecca1f7c94d39a45b511fa3de0c76c940fe7daa/%E8%81%94%E9%82%A6%E6%96%87%E6%A1%A3%E5%BA%93/%E3%80%8A%E4%BA%94%E6%B0%91%E4%B8%BB%E4%B9%89%E3%80%8B%E7%9B%AE%E6%A0%87.md">click here</a>.</p>
 </body>
 </html>
